# webdrop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ghcr.yml  node.yml  release.yml  rust.yml  server.yml  web.yml
src/: lib.rs  main.rs  registries.rs
src/controllers/: api.rs  main.rs  mod.rs  object.rs  session.rs  websocket.rs
src/models/: crypto.rs  event.rs  file.rs  mod.rs  object.rs  session.rs  snowflake.rs
src/repositories/: fs.rs  mod.rs
src/repositories/object/: fs.rs  mod.rs
src/repositories/session/: fs.rs  mod.rs
src/services/: mod.rs  object.rs  session.rs  websocket.rs
src/utils/: sync.rs
web/: index.html  package.json  pnpm-lock.yaml  success.html  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/components/: Form.svelte
web/src/lib/: crypto.ts  form.ts  index.ts  models.ts  notification.ts  utils.ts
web/src/lib/api/: session.ts
web/src/lib/components/: AudioContent.svelte  Content.svelte  DropdownMenu.svelte  FilePreview.svelte  Form.svelte  FormButton.svelte  FormButtons.svelte  IconButton.svelte  ImageContent.svelte  LinkContent.svelte  MediaContent.svelte  MediaContent.ts  PasswordForm.svelte  QRCodeWindow.svelte  TextContent.svelte  Toast.svelte  VideoContent.svelte  state.svelte.ts  utils.ts
web/src/lib/components/buttons/: FormButtons.svelte  IconButton.svelte
web/src/lib/components/contents/: AudioContent.svelte  Content.svelte  ImageContent.svelte  LinkContent.svelte  MediaContent.ts  TextContent.svelte  VideoContent.svelte
web/src/lib/components/dropdown/: DropdownMenu.svelte
web/src/lib/components/modals/: ConfirmationModal.svelte  Modal.svelte  QRCodeModal.svelte
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
web/src/routes/s/[sid]/: +layout.svelte  +page.svelte
web/src/routes/session/[sid]/: +page.svelte  +page.ts
