[package]
name = "webdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
rand = { version = "0.9.1", default-features = false, features = ["os_rng", "small_rng"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.14", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
temp-dir = "0.1.14"
